--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "lucide-react": "^0.554.0",
     "motion": "^12.23.26",
     "next": "16.0.10",
-    "pdf-parse": "^1.1.1",
+    "pdf-parse": "2.4.5",
     "razorpay": "^2.9.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uploadthing": "^7.7.4",
-    "zod": "^4.1.13"
+    "zod": "^3.25.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
