--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.554.0",
     "motion": "^12.23.26",
     "next": "16.0.10",
+    "openai": "^6.22.0",
     "pdf-parse": "2.4.5",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
