--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.5",
+    "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^1.0.5",
     "@langchain/core": "^1.1.0",
     "@neondatabase/serverless": "github:neondatabase/serverless",
@@ -24,7 +25,7 @@
     "motion": "^12.23.26",
     "next": "16.0.10",
     "openai": "^6.22.0",
-    "pdf-parse": "2.4.5",
+    "pdf-parse": "^1.1.4",
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
